--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         Understanding data structures allows you to choose the appropriate structure for your data, optimizing memory usage and improving the efficiency of operations like searching, insertion, and deletion. Algorithms provide methods and techniques for solving problems efficiently, reducing time and resource complexity.
       </p>
       <p>
-        By studying data structures and algorithms, you can enhance your problem-solving skills, improve your programming efficiency, and develop a strong foundation in computer science.
+        By studying data structures and algorithms, you can enhance your problem-solving skills, improve your programming efficiency, and develop a strong foundation in computer science
       </p>
     </section>
   </main>
