--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Data Structures by Kunal</title>
   <link rel="stylesheet" href="styles1.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
