--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Data Structures by Kunal</title>
-  <link rel="stylesheet" href="styles1.css">
+  <!-- <link rel="stylesheet" href="styles1.css"> -->
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  
   <header>
     <h1>Data Structures performed by Kunal</h1>
   </header>
   <nav>
     <ul>
       <li><a href="page1.html">Page 1</a></li>
-      
+      <li><button id="close-btn"> Close</button></li>
       <!-- Add more pages as needed -->
     </ul>
   </nav>
