--- a/page1.html
+++ b/page1.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Data Structures - Page 1</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="styles1.css">
+  <!-- <link rel="stylesheet" href="styles1.css"> -->
   <script src="script.js"></script>
   <script src="programs/searching.js"></script>
   <script src="programs/stack.js"></script>
@@ -22,6 +22,7 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
+
       <li><button id="close-btn">Close</button></li>
     </ul>
   </nav>
