--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <h1>ALGOS</h1>
     </div>
     <h1>Data Structures performed by Kunal</h1>
-    <button id="like-btn">Like</button>
-  <p>Total Likes: <span id="total-likes">0</span></p>
+    <!-- <button id="like-btn">Like</button>
+  <p>Total Likes: <span id="total-likes">0</span></p> -->
     <div id="datetime"></div>
   </header>
   <script>
