--- a/page1.html
+++ b/page1.html
@@ -12,8 +12,11 @@
   <script src="programs/queue.js"></script>
   <script src="programs/priority-queues.js"></script>
   <script src="programs/stack.js"></script>
-  <script src="programs/stack.js"></script>
+  <script src="programs/dynamic-arrays.js"></script>
   <script src="programs/linked-list.js"></script>
+  <script src="programs/arraylistandlinkedlist.js"></script>
+  <script src="programs/linear-search.js"></script>
+  <script src="programs/binary-search.js"></script>
 </head>
 <body>
   <header>
