--- a/page2.html
+++ b/page2.html
@@ -19,7 +19,13 @@
       </header>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+            <div class="dropdown">
+                <button class="dropbtn">Pages</button>
+                <div class="dropdown-content">
+                  <button class="dropdown-item" onclick="location.href='index.html'">DSA</button>
+                  <button class="dropdown-item" onclick="location.href='page1.html'">Page 1</button>
+                </div>
+              </div>
           <li><button id="close-btn">Close</button></li>
         </ul>
       </nav>
