--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         <div class="dropdown-content">
           <button class="dropdown-item" onclick="location.href='page1.html'">Page 1</button>
           <button class="dropdown-item" onclick="location.href='page2.html'">Page 2</button>
+          <button class="dropdown-item" onclick="location.href='page2.html'">Page 3</button>
+
         </div>
       </div>
       <!-- <button id="likeButton">Like</button>
