--- a/page1.html
+++ b/page1.html
@@ -48,6 +48,8 @@
         <div class="dropdown-content">
           <button class="dropdown-item" onclick="location.href='index.html'">Home</button>
           <button class="dropdown-item" onclick="location.href='page2.html'">Page 2</button>
+          <button class="dropdown-item" onclick="location.href='page3.html'">Page 3</button>
+
         </div>
       </div>
       <li><button id="close-btn">Close</button></li>
