--- a/page1.html
+++ b/page1.html
@@ -17,6 +17,7 @@
   <script src="programs/arraylistandlinkedlist.js"></script>
   <script src="programs/linear-search.js"></script>
   <script src="programs/binary-search.js"></script>
+  <script src="programs/bubble-sort.js"></script>
 </head>
 <body>
   <header>
