--- a/page1.html
+++ b/page1.html
@@ -19,6 +19,8 @@
   <script src="programs/binary-search.js"></script>
   <script src="programs/bubble-sort.js"></script>
   <script src="programs/merge-sort.js"></script>
+  <script src="programs/hash-table.js"></script>
+  <script src="programs/binary-search-tree.js"></script>
 </head>
 <body>
   <header>
