--- a/page1.html
+++ b/page1.html
@@ -21,6 +21,7 @@
   <script src="programs/merge-sort.js"></script>
   <script src="programs/hash-table.js"></script>
   <script src="programs/binary-search-tree.js"></script>
+  <script src="programs/breadth-first-search.js"></script>
 </head>
 <body>
   <header>
