--- a/page1.html
+++ b/page1.html
@@ -22,6 +22,9 @@
   <script src="programs/hash-table.js"></script>
   <script src="programs/binary-search-tree.js"></script>
   <script src="programs/breadth-first-search.js"></script>
+  <script src="programs/depth-first-search.js"></script>
+  <script src="programs/selectionsort.js"></script>
+  <script src="programs/graph.js"></script>
 </head>
 <body>
   <header>
