--- a/page1.html
+++ b/page1.html
@@ -25,6 +25,10 @@
   <script src="programs/depth-first-search.js"></script>
   <script src="programs/selectionsort.js"></script>
   <script src="programs/graph.js"></script>
+  <script src="programs/interpolation-search.js"></script>
+  <script src="programs/recursion.js"></script>
+  <script src="programs/insertion-sort.js"></script>
+  <script src="programs/quick-sort.js"></script>
 </head>
 <body>
   <header>
