tree traversal added

--- a/page1.html
+++ b/page1.html
@@ -29,6 +29,7 @@
   <script src="programs/recursion.js"></script>
   <script src="programs/insertion-sort.js"></script>
   <script src="programs/quick-sort.js"></script>
+  <script src="programs/tree-traversal.js"></script>
 </head>
 <body>
   <header>
