changes in technologies

--- a/page3.html
+++ b/page3.html
@@ -48,7 +48,7 @@
             </p> -->
           </section>
           </section>
-          <!-- <section id="why-dsa">
+           <section id="why-dsa">
             <h2>Why Study Data Structures and Algorithms?</h2>
             <button id="toggleButtondsa">Toggle Content</button>
             <section id="in-dsa">
@@ -127,7 +127,7 @@
                   - Dive deeper into more advanced algorithms like divide and conquer, greedy algorithms, and backtracking.<br>
                   - Study algorithmic paradigms like randomized algorithms, approximation algorithms, and parallel algorithms.
               </p>
-            </section> -->
+            </section> 
              </section>
     </main>
 
