--- a/page3.html
+++ b/page3.html
@@ -47,7 +47,7 @@
               Explore the different pages to learn about arrays, linked lists, sorting algorithms, and more. Click on the links in the navigation to navigate through the website and access the content you're interested in.
             </p> -->
           </section>
-          </section>
+        <!--  </section>
            <section id="why-dsa">
             <h2>Why Study Data Structures and Algorithms?</h2>
             <button id="toggleButtondsa">Toggle Content</button>
@@ -127,7 +127,7 @@
                   - Dive deeper into more advanced algorithms like divide and conquer, greedy algorithms, and backtracking.<br>
                   - Study algorithmic paradigms like randomized algorithms, approximation algorithms, and parallel algorithms.
               </p>
-            </section> 
+            </section>  -->
              </section>
     </main>
 
