--- a/page3.html
+++ b/page3.html
@@ -41,6 +41,7 @@
                 allowing programmers to write human-readable code that can be executed by a computer.
             </p>
             <!-- <p>
+                hello there 
               On this website, you will find information and implementations of various data structures and algorithms. Each page focuses on specific data structures, providing an overview, examples, and programs for better understanding.
             </p>
             <p>
