what's today's speacial

--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,7 @@
           <span class="logo-text">ALGOS</span>
           <h1>ALGOS</h1>
         </div>
-        <h1>Technologies - Page 2</h1>
+        <h1>Today's Special </h1>
         <div id="datetime"></div>
       </header>
       <nav>
@@ -32,5 +32,14 @@
           <li><button id="close-btn">Close</button></li>
         </ul>
       </nav>
+      <main>
+        <section id="Today's_work">
+          <h2>Today's Special</h2>
+          <button id="toggleButtonintro">Toggle Content</button>
+          <section id="2day's_work">
+          <p>
+              got again hand'on on this website and lets make it more productive or interesting 
+          </p>
+      </main>
 </body>
 </html>
