--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       <div class="dropdown">
         <button class="dropbtn">Pages</button>
         <div class="dropdown-content">
-          <button class="dropdown-item" onclick="location.href='page1.html'">Page 1</button>
-          <button class="dropdown-item" onclick="location.href='page2.html'">Page 2</button>
-          <button class="dropdown-item" onclick="location.href='page2.html'">Page 3</button>
+          <button class="dropdown-item" onclick="location.href='page1.html'">Page 1 (Data Structures)</button>
+          <button class="dropdown-item" onclick="location.href='page2.html'">Page 2 (Today's Speacial)</button>
+          <button class="dropdown-item" onclick="location.href='page2.html'">Page 3 (Language Info) </button>
 
         </div>
       </div>
