--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Technologies</title>
+    <title>Today's special</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
